# qr_to_pos

./: README.md  main.py  pyproject.toml
qr_to_pos/: __init__.py  camera.py  processor.py  qr.py  server.py
stubs/pyrealsense2/: __init__.pyi  pyrealsense2.pyi
tests/: test_server.py
unity/: QRDetectionRenderer.cs
